<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SignUpActivity"
    android:background="#FFFFFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtSignUp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/signup"
            android:textSize="30sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgDefaultDpPerson"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/txtSignUp1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:src="@drawable/default_dp_person" />


        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/imgDefaultDpPerson"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/style_rounded_corner"
            android:backgroundTint="#dcdcdc"
            android:hint="@string/fullname"
            android:inputType="text"
            android:paddingHorizontal="10dp" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/etFullName"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/style_rounded_corner"
            android:backgroundTint="#dcdcdc"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingHorizontal="10dp" />

        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/etUserName"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/style_rounded_corner"
            android:backgroundTint="#dcdcdc"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="10dp" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/etEmailAddress"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/style_rounded_corner"
            android:backgroundTint="#dcdcdc"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:paddingHorizontal="10dp"
            tools:ignore="TextFields" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPhoneNumber"
            android:layout_marginTop="15dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/style_rounded_corner"
                android:backgroundTint="#dcdcdc"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:paddingHorizontal="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:layout_marginTop="15dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/style_rounded_corner"
                android:backgroundTint="#dcdcdc"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingHorizontal="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etConfirmPassword"
            app:counterEnabled="true"
            app:counterMaxLength="340"
            app:hintEnabled="false"
            android:layout_marginTop="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/style_rounded_corner"
                android:backgroundTint="#dcdcdc"
                android:hint="@string/bio"
                android:inputType="textMultiLine"
                android:paddingHorizontal="12dp"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:ellipsize="start"
                android:gravity="left|top"
                android:paddingTop="8dp"
                android:scrollbars="vertical" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/txtSocialMediaLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etBio"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/social_media_link"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/etTwitterLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtSocialMediaLink"
            android:layout_marginHorizontal="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/twitter_logo" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/style_rounded_corner_1"
                android:backgroundTint="#dcdcdc"
                android:inputType="textWebEditText"
                android:hint="@string/twitter_link"
                android:paddingHorizontal="10dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/etFacebookLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etTwitterLink"
            android:layout_marginHorizontal="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/fb_logo_1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/style_rounded_corner_1"
                android:backgroundTint="#dcdcdc"
                android:hint="@string/facebook_link"
                android:inputType="textWebEditText"
                android:paddingHorizontal="10dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/etInstagramLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etFacebookLink"
            android:layout_marginHorizontal="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/insta_logo" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/style_rounded_corner_1"
                android:backgroundTint="#dcdcdc"
                android:hint="@string/instagram_link"
                android:inputType="textWebEditText"
                android:paddingHorizontal="10dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/etYoutubeLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etInstagramLink"
            android:layout_marginHorizontal="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/youtube_logo" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/style_rounded_corner_1"
                android:backgroundTint="#dcdcdc"
                android:inputType="textWebEditText"
                android:hint="@string/youtube_link"
                android:paddingHorizontal="10dp" />

        </RelativeLayout>

        <CheckBox
            android:id="@+id/cbAgreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etYoutubeLink"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/agreement_string" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cbAgreement"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/style_rounded_corner"
            android:text="@string/sign_up_1"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/txtAlreadyHaveAccountAndLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSignUp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp">

            <TextView
                android:id="@+id/txtAlreadyHaveAnAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/already_have_an_account" />

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/txtAlreadyHaveAnAccount"
                android:text="@string/login1"
                android:textSize="16sp" />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>