<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ItemLayout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:src="@color/black"/>

        <TextView
            android:id="@+id/itemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobiloitte"
            android:textSize="15sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/itemCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/it_company"
            android:textSize="15sp"
            android:textColor="@color/orange" />

        <TextView
            android:id="@+id/itemLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okhla_phase_1_new_delhi"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/ic_location"
            app:drawableTint="@color/black" />

    </LinearLayout>


</androidx.cardview.widget.CardView>